third_party/rust/chromium_crates_io/vendor/derive_more-v2/tests/compile_fail/add_assign/enum.rs
#[derive(derive_more::AddAssign)]
enum Foo {
    Bar(i32),
}

fn main() {}
